first part added commit

--- a/index.html
+++ b/index.html
@@ -6,10 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first assignment</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
 
 </head>
 
 <body>
+    <section class="first-part">
+        <div class="half-width">
+            <div id="side-border">
+                <h1 class="text-style">Stay Focused on</h1>
+                <h1><span id="blue-text" class="text-style">Mission 2022</span> </h1>
+            </div>
+            <div class="bodypart-one">
+                <p>
+                    Have you ever wondered how easy it is to wander away and lose focus while trying to work? If you’ll
+                    agree with me, it’s often always a hell of a job trying to manage distractions and stay focused at
+                    work.
+                </p>
+                <a class="button-link" target="_blank"
+                    href="https://www.coaching-online.org/how-to-stay-focused-at-work/">Explore Now</a>
+                <h5>Scroll down to explore more about us.</h5>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-3.png" alt="">
+        </div>
+
+    </section>
+
 
 </body>
 
