second part added commit

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
 
 </head>
@@ -37,6 +40,36 @@
         </div>
         <div class="half-width">
             <img src="images/person/person-3.png" alt="">
+        </div>
+    </section>
+    <section class="second-part">
+        <div>
+            <h1 class="bold-heading"><strong> My Mission in <span id="blue-word"> 2022 </span> </strong></h1>
+        </div>
+        <div class="second-area">
+            <div class="second-itemone">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3></b> Mission</b></h3>
+                <p class="text-size">To enhancing the business growth of my customers with creative Design and
+                    Development
+                    to deliver
+                    market-defining high-quality solutions that create value and consistent competitive advantage for my
+                    clients around the world.</p>
+            </div>
+            <div class="second-itemtwo">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h3></b> Vission</b></h3>
+                <p class="text-size">To become a prime performer, in providing quality Web, Print and Software solutions
+                    in
+                    the competitive global market place.</p>
+            </div>
+            <div class="second-itemthree">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h3></b> Goals</b></h3>
+                <p class="text-size">To build an easy-to-use interface between the user and the product. This interface
+                    may
+                    be a simple web page, Flash/Silverlight application, Java applet, or HTML5 application.</p>
+            </div>
         </div>
 
     </section>
