third part added commit

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
         </div>
 
     </section>
+    <section class="third-part">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1 class="bold-headingg">Develop Without Limits</h1>
+            <p>
+                Time is of the essence. Young people need high-quality programming now more than ever. Your funders and
+                partners are requesting your services. Now you must ensure that the teams on the ground have the
+                knowledge and skills they need for successful implementation.
+            </p>
+        </div>
+
+    </section>
 
 
 </body>
