forth part added commit

--- a/index.html
+++ b/index.html
@@ -84,6 +84,24 @@
                 partners are requesting your services. Now you must ensure that the teams on the ground have the
                 knowledge and skills they need for successful implementation.
             </p>
+            <a class="button-link" target="_blank" href="https://www.developmentwithoutlimits.org/">Read the
+                Documentation</a>
+        </div>
+    </section>
+    <section class="forth-part">
+        <div class="half-width">
+            <h1 class="bold-headingg">Know our Global Community</h1>
+            <p>
+                Every web developer has been there. They have a problem and what do they do? Well, they go to Google to
+                find a quick answer. The web offers so much content right at our fingertips that it makes it easy to
+                diagnose and troubleshoot problems when they arise.
+            </p>
+            <a class="button-link" target="_blank"
+                href="https://dev.to/prathaprathod/check-out-good-web-development-communities-abm">Read the
+                Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pictures/project.png" alt="">
         </div>
 
     </section>
