last part added commit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
 
 
 </head>
@@ -103,9 +106,16 @@
         <div class="half-width">
             <img src="images/pictures/project.png" alt="">
         </div>
+    </section>
+    <section class="fifth-part">
+        <div>
+            <h4 class="bold-footer">Mission <span class="new-year">2022</span></h4>
+            <p class="text-footer">
+                Hard work, Perseverance and Determination for 2022
+            </p>
+        </div>
 
     </section>
-
 
 </body>
 
