--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="web-apps">
+        <div>
+            <h1 class="web-app">Web Developer or Android Developer</h1>
+            <p class="half-width">Developers skilled in both android and web development would have the highest demand
+                overall because it will
+                open up much more career opportunities for them in both the developing fields. So, don't get confused
+                and
+                choose anyone of them. </p>
+            <p class="half-width">We are on e survey, so please write your choice in below box and click on submit
+                button. Thank you.</p>
+            <div class="half-width">
+                <input type="text">
+                <input type="submit">
+            </div>
+
+        </div>
+        <div class="half-widthh">
+            <img src="images/web-vs-app.jpg" alt="">
+        </div>
+
+    </section>
     <section class="fifth-part">
         <div>
             <h4 class="bold-footer">Mission <span class="new-year">2022</span></h4>
